--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <h1 id="title">JAGU Servey Form</h1>
     <p id="description">I'm developing my skills</p>
-    <form action="" id="survey-form"></form>
+    <form action="" id="survey-form">
+	   <input name="name" id="name" type="text" placeholder="name" required/>
+	   <input name="email" id="email" type="email" placeholder="email" required/>
+    </form>
     <script  src="js/index.js"></script>
   </body>
 </html>
