my new features

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <form action="" id="survey-form">
 	   <input name="name" id="name" type="text" placeholder="name" required/>
 	   <input name="email" id="email" type="email" placeholder="email" required/>
+    <input name="age" id="number" type="number" min="13" max="120" placeholder="Age" />
     </form>
     <script  src="js/index.js"></script>
   </body>
