--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 	   <input name="name" id="name" type="text" placeholder="name" required/>
 	   <input name="email" id="email" type="email" placeholder="email" required/>
     <input name="age" id="number" type="number" min="13" max="120" placeholder="Age" />
+    <select name="role" id="dropdown" required>
+      <option disabled selected value>Select current</option>
+      <option value="student">Student</option>
+      <option value="job">Fulltime</option>
+      <option value="other">Other</option>
+    </select>
     </form>
     <script  src="js/index.js"></script>
   </body>
